--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,12 @@
 title: "Listen Headlines Podcasts"
 description: "A Jekyll Theme designed for Podcasters"
 podcast-description: "A Jekyll Theme designed for Podcasters. This is your podcast's summary."
-url:  "https://jekyll-podcaster.netlify.app/" # Actual base url of the website
-baseurl: "/"                    # url of the jekyll blog. e.g. if you set url to "mysite.com" and baseurl to "blog", the jekyll website will work on "mysite.com/blog"
+url:  "https://ilanh.github.io/" # Actual base url of the website
+baseurl: "podcats/"                    # url of the jekyll blog. e.g. if you set url to "mysite.com" and baseurl to "blog", the jekyll website will work on "mysite.com/blog"
 author:
-  name: "Alessio Franceschi"
-  email: "alessiofranceschi2@gmail.com"
-  url: "https://alessiofranceschi.me"
+  name: "Ilan Harel"
+  email: "@gmail.com"
+  url: "https://"
 permalink: pretty
 permalink: /:title
 keywords: [podcast, jekyll]
@@ -36,10 +36,10 @@ logo: /assets/img/Podcast_Cover.png
 social:
   name: Alessio Franceschi
   links:
-    - https://github.com/PandaSekh
-    - https://twitter.com/PandaSekh
-    - https://www.linkedin.com/in/alessio-franceschi/
-lang: it
+    - https://github.com/ilanh
+    - https://twitter.com/ilanharel
+    - https://www.linkedin.com/in/ilanharel/
+lang: he
 
 #Podcast Metadata. Used by the RSS Feed, which currently isn't in use. So you can avoid this
 podcast_title: Jekyll Podcaster
