--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
 title: "Listen Headlines Podcasts"
-description: "A Jekyll Theme designed for Podcasters"
+description: "Podcasters"
 podcast-description: "A Jekyll Theme designed for Podcasters. This is your podcast's summary."
 url:  "https://ilanh.github.io/" # Actual base url of the website
-baseurl: "podcats/"                    # url of the jekyll blog. e.g. if you set url to "mysite.com" and baseurl to "blog", the jekyll website will work on "mysite.com/blog"
+baseurl: "podcats"                    # url of the jekyll blog. e.g. if you set url to "mysite.com" and baseurl to "blog", the jekyll website will work on "mysite.com/blog"
 author:
   name: "Ilan Harel"
   email: "@gmail.com"
