--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: "Listen Headlines Podcasts"
 description: "Podcasters"
 podcast-description: "A Jekyll Theme designed for Podcasters. This is your podcast's summary."
-url:  "https://ilanh.github.io/" # Actual base url of the website
+url:  "https://ilanh.github.io" # Actual base url of the website
 baseurl: "podcats"                    # url of the jekyll blog. e.g. if you set url to "mysite.com" and baseurl to "blog", the jekyll website will work on "mysite.com/blog"
 author:
   name: "Ilan Harel"
@@ -28,13 +28,13 @@ sass:
 
 #SEO
 twitter:
-  username: PandaSekh
+  username: nnnmnmnmnmnmn
   card: summary
 facebook:
   app_id: 
 logo: /assets/img/Podcast_Cover.png
 social:
-  name: Alessio Franceschi
+  name: Ilan
   links:
     - https://github.com/ilanh
     - https://twitter.com/ilanharel
