--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -7,25 +7,14 @@ pages:
 
 social:
   - {icon: 'instagram', type: "brand", link: '#'}
-  - {icon: 'twitter', type: "brand", link: 'https://twitter.com/name'}
+  - {icon: 'twitter', type: "brand", link: 'https://twitter.com/#####'}
   - {icon: 'facebook', type: "brand", link: '#'}
   - {icon: 'youtube', type: "brand", link: '#'}  
-  - {icon: 'envelope', type: "solid", link: 'mailto:mmmm2@gmail.com'}
+  - {icon: 'envelope', type: "solid", link: 'mailto:#######@gmail.com'}
   - {icon: 'rss', type: "solid", link: "#"}
 
 websites-podcast:
   - {name: 'Apple Podcast', link: '#'}
-  - {name: 'Spotify', link: '#'}
-  - {name: 'YouTube', link: '#'}
-  - {name: 'Android', link: '#'}
-  - {name: 'Spreaker', link: '#'}
-  - {name: 'Google Podcast', link: '#'}
-  - {name: 'Anchor', link: '#'}
-  - {name: 'Castbox', link: '#'}
-  - {name: 'Overcast', link: '#'}
-  - {name: 'RadioPublic', link: '#'}
-  - {name: 'Breaker', link: '#'}  
-  - {name: 'RSS', link: '#'}
 
 translate-date: true #See _includes/date.html to translate the months' name
 shownotes: false
