--- a/_data/biblio.yaml
+++ b/_data/biblio.yaml
@@ -5,3 +5,7 @@
 - authors: Michael's Rose
   title: "[Minimal Mistakes](https://mmistakes.github.io/minimal-mistakes/markup-syntax-highlighting)"
   key: highlight
+
+- authors: John Smith
+  title: "Just citation"
+  key: ref2
