--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ collections:
     permalink: /:collection/:name
 
 # BUILD SETTINGS
-plugins: [jekyll-paginate, jekyll-seo-tag, jekyll-feed]
+plugins: [jekyll-paginate, jekyll-seo-tag, jekyll-feed, jekyll-target-blank]
 exclude: [".jekyll-cache", ".idea", "vendor/*", "assets/node_modules"]
 
 
